--- a/src/app/pages/movie-detail/movie-detail.page.html
+++ b/src/app/pages/movie-detail/movie-detail.page.html
@@ -34,22 +34,22 @@
         <ion-icon [name]="movie.vote_average >= 8 ? 'star' : movie.vote_average >= 7 ? 'star-half' : 'star-outline'"></ion-icon>
         <ion-icon [name]="movie.vote_average >= 10 ? 'star' : movie.vote_average >= 9 ? 'star-half' : 'star-outline'"></ion-icon>
       </div>
-      <div class="count">{{ movie.vote_count }} votos</div>
+      <div class="count">{{ movie.vote_count }} Votes</div>
     </div>
 
     <div class="overview">{{ movie.overview }}</div>
 
     <div class="duration" *ngIf="movie && movie.runtime">
-      <div class="label"><ion-icon name="md-time"></ion-icon>Duración</div>
+      <div class="label"><ion-icon name="md-time"></ion-icon>Duration</div>
       <div class="value">{{ movie.runtime }} mins</div>
     </div>
     <div class="genres" *ngIf="movie && movie.genres && movie.genres.length">
-      <div class="label"><ion-icon name="md-pricetag"></ion-icon>Géneros</div>
+      <div class="label"><ion-icon name="md-pricetag"></ion-icon>Genres</div>
       <div class="value"><span *ngFor="let genre of movie.genres; let last = last">{{ genre.name }}<span *ngIf="!last">, </span></span></div>
     </div>
 
     <div class="cast" *ngIf="movie && movie.credits && movie.credits.cast && movie.credits.cast.length">
-      <div class="label"><ion-icon name="md-people"></ion-icon>Reparto</div>
+      <div class="label"><ion-icon name="md-people"></ion-icon>Distribution</div>
       <div class="persons">
         <div *ngFor="let a of movie.credits.cast; let index = index">
           <div class="person" *ngIf="index < 15" [style.background-image]="a.profile_path ? 'url(https://image.tmdb.org/t/p/w500' + a.profile_path + ')' : ''" (click)="onPersonDetail(a.id)">
