--- a/src/app/pages/search/search.page.html
+++ b/src/app/pages/search/search.page.html
@@ -7,8 +7,8 @@
   </ion-toolbar>
   <ion-toolbar>
     <ion-segment [(ngModel)]="searchType" (ionChange)="onSearchTypeChange()">
-      <ion-segment-button value="movies">Películas</ion-segment-button>
-      <ion-segment-button value="persons">Personas</ion-segment-button>
+      <ion-segment-button value="movies">Movies</ion-segment-button>
+      <ion-segment-button value="persons">Persons</ion-segment-button>
     </ion-segment>
   </ion-toolbar>
 </ion-header>
